CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
project(gmp-caching)

#find_path(GMP_SOURCE_ROOT_DIR CMakeLists.txt
#  PATHS ${CMAKE_SOURCE_DIR}/src
#  NO_DEFAULT_PATH
#  DOC "Location of gmp-caching source as a CMAKE subproject")

find_package(Doxygen)

IF(CMAKE_COMPILER_IS_GNUCXX)
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
ENDIF(CMAKE_COMPILER_IS_GNUCXX)

ADD_SUBDIRECTORY(doc)
ADD_SUBDIRECTORY(src)
INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}
  ${PROJECT_BINARY_DIR}
)
